--- a/index.html
+++ b/index.html
@@ -5,10 +5,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document Yama</title>
+
+    <!-- Ini CSS Internal -->
+    <style>
+        .content {
+            color: blue;
+        }
+
+        #content {
+            color: red;
+        }
+    </style>
+
+    <!-- Ini CSS External -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+    <!-- Ini CSS Inline -->
+    <header style="display: flex; justify-content: space-between;">
+        <h1 style="color: brown;">Ini Kiri</h1>
+        <h1 style="color: brown;">Ini Kanan</h1>
+    </header>
 
+    <article>
+        <p class="content">Lorem Ipsum Dolor Sit Amet Adipiscing ...</p>
+        <p class="content" id="content">Lorem Ipsum Dolor Sit Amet Adipiscing ...</p>
+    </article>
+
+    <footer>
+        <span>Ini Footer</span>
+    </footer>
 </body>
 
 </html>
